--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
             <div class="header-info">
                 <h1>CV Junior Front End Developer</h1>
                 <h2>Pavel Leskavets</h2>                                   
-                        <a href="tel:375336924025" class="header-link"><img src="phone.png" alt="phone" class="header-img"></a></li>
-                        <a href="mailto:leskovecpavel7@gmail.com" class="header-link"><img src="mail.png" alt="mail" class="header-img"></a>
-                        <a href="https://www.linkedin.com/in/%D0%BF%D0%B0%D0%B2%D0%B5%D0%BB-%D0%BB%D0%B5%D1%81%D0%BA%D0%BE%D0%B2%D0%B5%D1%86-9465bb170/" target="_blank" class="header-link"><img src="linkedin.png" alt="linkedin"  class="header-img"></a>
-                        <a href="https://t.me/jake_epping" target="_blank" class="header-link"><img src="telegram.png" alt="github" class="header-img"></a>
-                        <a href="https://github.com/pavel-leskavets" target="_blank" class="header-link"><img src="github.png" alt="github" class="header-img"></a>          
+                    <a href="tel:375336924025" class="header-link"><img src="phone.png" alt="phone" class="header-img"></a></li>
+                    <a href="mailto:leskovecpavel7@gmail.com" class="header-link"><img src="mail.png" alt="mail" class="header-img"></a>
+                    <a href="https://www.linkedin.com/in/%D0%BF%D0%B0%D0%B2%D0%B5%D0%BB-%D0%BB%D0%B5%D1%81%D0%BA%D0%BE%D0%B2%D0%B5%D1%86-9465bb170/" target="_blank" class="header-link"><img src="linkedin.png" alt="linkedin"  class="header-img"></a>
+                    <a href="https://t.me/jake_epping" target="_blank" class="header-link"><img src="telegram.png" alt="github" class="header-img"></a>
+                    <a href="https://github.com/pavel-leskavets" target="_blank" class="header-link"><img src="github.png" alt="github" class="header-img"></a>          
             </div>        
         </header>
         <main>
+            <hr>
+            <div class="main-info">
+                <h3>Summary:</h3>
+                <p> I believe that i can be an asset to your company because i have that i have an 
+                    understanding of the basic skills of javascript. i have a interest for programming
+                    which i have discover through times self-study and i would like to develop my skills
+                    in a professional environment.
+                </p>
+            </div>
 
         </main>
         <footer>
