feat: add skills

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                     in a professional environment.
                 </p>
             </div>
+            <div class="main-info">
+                <h3>Skills:</h3>
+                    <ul>
+                        <li><b>English Proficiency:</b> pre-Intermediate A2 (reading and understanding of technical documentation)</li>
+                        <li><b>Language:</b> JavaScript</li>
+                        <li><b>Other technologies:</b> HTML/HTML5, CSS/CSS3</li>
+                        <li><b>Frameworks:</b> React</li>
+                        <li><b>System of version manage:</b> GitHub</li>
+                        <li><b>Software and Tools:</b> VSCode, Brackets(+plugins), Photoshop, Avocode</li>
+                    </ul>
+            </div>
 
         </main>
         <footer>
