feat: add code examples

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                         <li><b>Software and Tools:</b> VSCode, Brackets(+plugins), Photoshop, Avocode</li>
                     </ul>
             </div>
+            <div class="main-info">
+                <h3>Code examples:</h3>
+                <ul>
+                    <li><a href="https://github.com/pavel-leskavets/hexal" target="_blank"> hexal</a><br></li>
+                    <li><a href="https://github.com/pavel-leskavets/react-app" target="_blank"> react-app</a></li>
+                </ul>           
+            </div>
 
         </main>
         <footer>
