--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                     <li><a href="https://github.com/pavel-leskavets/react-app" target="_blank"> react-app</a></li>
                 </ul>           
             </div>
+            <div class="main-info">
+                <h3>IT Education:</h3>
+                <ul>
+                    <li>Feb 2019, CodeAcademy on-line course: HTML/CSS <a href="https://www.codecademy.com/users/leskovecpavel71814545103/achievements" target="_blank">achievements</a></li>
+                    <li><a href="https://teachmeskills.by/" target="_blank"> Course TeachMeSkills “Frontend developer”</a> , September 2018 – February 2019.</li>
+                </ul>
+            </div>
 
         </main>
         <footer>
