feat: add Education

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                     <li><a href="https://teachmeskills.by/" target="_blank"> Course TeachMeSkills “Frontend developer”</a> , September 2018 – February 2019.</li>
                 </ul>
             </div>
+            <div class="main-info">
+                <h3>Education:</h3>
+                <ul>
+                    <li>BSUIR, Medical Electronics, 2017</li>
+                </ul>
+            </div>
 
         </main>
         <footer>
