feat: add additional info

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                     <li>BSUIR, Medical Electronics, 2017</li>
                 </ul>
             </div>
+            <div class="main-info">
+                <h3>Additional Information:</h3> 
+                <ul>
+                    <li><b>Professional interests:</b> Currently I’m working to improve my level of English</li>
+                </ul>
+        
+                    
+            </div>
 
         </main>
         <footer>
