--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         </main>
         <footer>
-
+            <em>Developed by Pasha Leskavets RSSchool 2019-Q1</em>
         </footer>
     </body>
 </html>
