--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <hr>
             <div class="main-info">
                 <h3>Summary:</h3>
-                <p> I believe that i can be an asset to your company because i have that i have an 
+                <p> I believe kuku that i can be an asset to your company because i have that i have an 
                     understanding of the basic skills of javascript. i have a interest for programming
                     which i have discover through times self-study and i would like to develop my skills
                     in a professional environment.
