--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li><b>English Proficiency:</b> pre-Intermediate A2 (reading and understanding of technical documentation)</li>
                         <li><b>Language:</b> JavaScript</li>
-                        <li><b>Other technologies:</b> HTML/HTML5, CSS/CSS3</li>
+                        <li><b>Other technologies:</b> HTML/HTML5, CSS/CSS3, Webpack, Eslint, Babel</li>
                         <li><b>Frameworks:</b> React</li>
                         <li><b>System of version manage:</b> GitHub</li>
                         <li><b>Software and Tools:</b> VSCode, Brackets(+plugins), Photoshop, Avocode</li>
@@ -46,8 +46,11 @@
             <div class="main-info">
                 <h3>Code examples:</h3>
                 <ul>
-                    <li><a href="https://github.com/pavel-leskavets/hexal" target="_blank"> hexal</a><br></li>
-                    <li><a href="https://github.com/pavel-leskavets/react-app" target="_blank"> react-app</a></li>
+                    <li><a href="https://pavel-leskavets.github.io/neutron/" target="_blank"> Neutron-mail</a><br></li>
+                    <li><a href="https://pavel-leskavets.github.io/hexal-io/" target="_blank"> Hexal</a><br></li>
+                    <li><a href="https://pavel-leskavets.github.io/movie-app/" target="_blank"> Movie-app</a></li>                    
+                    <li><a href="https://pavel-leskavets.github.io/palette-app/" target="_blank"> Palette</a><br></li>
+                    <li><a href="https://pavel-leskavets.github.io/rating-task/" target="_blank"> Rating sort</a><br></li>
                 </ul>           
             </div>
             <div class="main-info">
@@ -55,6 +58,7 @@
                 <ul>
                     <li>Feb 2019, CodeAcademy on-line course: HTML/CSS <a href="https://www.codecademy.com/users/leskovecpavel71814545103/achievements" target="_blank">achievements</a></li>
                     <li><a href="https://teachmeskills.by/" target="_blank"> Course TeachMeSkills “Frontend developer”</a> , September 2018 – February 2019.</li>
+                    <li><a href="https://rollingscopes.com/" target="_blank"> The Rolling Scopes “Frontend developer”</a> , February 2019 – until now</li>
                 </ul>
             </div>
             <div class="main-info">
