fix: fix styles

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Pavel Leskavets</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
     <body>
         <header>
@@ -15,18 +16,21 @@
             <div class="header-info">
                 <h1>CV Junior Front End Developer</h1>
                 <h2>Pavel Leskavets</h2>                                   
-                    <a href="tel:375336924025" class="header-link"><img src="./assets/phone.png" alt="phone" class="header-img"></a></li>
-                    <a href="mailto:leskovecpavel7@gmail.com" class="header-link"><img src="./assets/mail.png" alt="mail" class="header-img"></a>
-                    <a href="https://www.linkedin.com/in/%D0%BF%D0%B0%D0%B2%D0%B5%D0%BB-%D0%BB%D0%B5%D1%81%D0%BA%D0%BE%D0%B2%D0%B5%D1%86-9465bb170/" target="_blank" class="header-link"><img src="./assets/linkedin.png" alt="linkedin"  class="header-img"></a>
-                    <a href="https://t.me/jake_epping" target="_blank" class="header-link"><img src="./assets/telegram.png" alt="github" class="header-img"></a>
-                    <a href="https://github.com/pavel-leskavets" target="_blank" class="header-link"><img src="./assets/github.png" alt="github" class="header-img"></a>          
+                    <a href="tel:375336924025" class="header-link"><i class="fas fa-phone header-img"></i></a></li>
+                    <a href="mailto:leskovecpavel7@gmail.com" class="header-link"><i class="far fa-envelope-open header-img"></i></a>
+                    <a href="https://www.linkedin.com/in/%D0%BF%D0%B0%D0%B2%D0%B5%D0%BB-%D0%BB%D0%B5%D1%81%D0%BA%D0%BE%D0%B2%D0%B5%D1%86-9465bb170/" target="_blank" class="header-link"><i class="fab fa-linkedin-in header-img"></i></a>
+                    <a href="https://t.me/jake_epping" target="_blank" class="header-link"><i class="far fa-paper-plane header-img"></i></a>
+                    <a href="https://github.com/pavel-leskavets" target="_blank" class="header-link"><i class="fab fa-github header-img"></i></a>          
             </div>        
         </header>
         <main>
             <hr>
             <div class="main-info">
                 <h3>Summary:</h3>
-                <p> I believe that i can be an asset to your company because i have that i have an 
+                <p>I am pleased to consider any internship options. At the moment I am going through The Rolling Scopes, 
+                    a very intensive course on JavaScript, with screening out after each stage, which is conducted by Epam.
+                     I devote all my free time to improving my programming skills and English. I believe that i can be an asset 
+                     to your company because i have that i have an 
                     understanding of the basic skills of javascript. i have a interest for programming
                     which i have discover through times self-study and i would like to develop my skills
                     in a professional environment.
@@ -44,8 +48,10 @@
                     </ul>
             </div>
             <div class="main-info">
-                <h3>Code examples:</h3>
+                <h3>Code example links:</h3>
                 <ul>
+                    <li><a href="https://pavel-leskavets.github.io/animation-player/" target="_blank"> Piskel Clone</a><br></li>
+                    <li><a href="https://pavel-leskavets.github.io/weather-app/" target="_blank"> Weather-app</a><br></li>
                     <li><a href="https://pavel-leskavets.github.io/neutron/" target="_blank"> Neutron-mail</a><br></li>
                     <li><a href="https://pavel-leskavets.github.io/hexal-io/" target="_blank"> Hexal</a><br></li>
                     <li><a href="https://pavel-leskavets.github.io/movie-app/" target="_blank"> Movie-app</a></li>                    
