fix: fix styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <a href="https://www.linkedin.com/in/%D0%BF%D0%B0%D0%B2%D0%B5%D0%BB-%D0%BB%D0%B5%D1%81%D0%BA%D0%BE%D0%B2%D0%B5%D1%86-9465bb170/" target="_blank" class="header-link"><i class="fab fa-linkedin-in header-img"></i></a>
                     <a href="https://t.me/jake_epping" target="_blank" class="header-link"><i class="far fa-paper-plane header-img"></i></a>
                     <a href="https://github.com/pavel-leskavets" target="_blank" class="header-link"><i class="fab fa-github header-img"></i></a>          
-            </div>        
+            </div>   
+            <a href="./assets/cv.pdf" class="pdf-download" target="_blank" download="./assets/cv.pdf">Download PDF</a>     
         </header>
         <main>
             <hr>
