fix: fix styles

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 </ul>           
             </div>
             <div class="main-info">
+                    <h3><a href="https://sourcerer.io/pavel-leskavets" target="_blank">Github analytics:</a></h3>
+                      
+                </div>
+            <div class="main-info">
                 <h3>IT Education:</h3>
                 <ul>
                     <li>Feb 2019, CodeAcademy on-line course: HTML/CSS <a href="https://www.codecademy.com/users/leskovecpavel71814545103/achievements" target="_blank">achievements</a></li>
